--- a/index.html
+++ b/index.html
@@ -4,12 +4,61 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Schronisko Rybka</title>
+    <!-- <link rel="icon" type="img/favicon" href="/images/favicon.ico"> -->
+    <meta name="description" content="Schronisko dla Twojej Złotej Rybki">
+    <script src="https://kit.fontawesome.com/7df5bc0471.js" crossorigin="anonymous"></script>
+    <!-- <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Pacifico&family=Roboto+Condensed&display=swap"
+        rel="stylesheet"> -->
+    <link rel="stylesheet" href="css/style.css">
+    <meta name='keywords' content='schronisko, zwierzeta, kot, pies'>
+    <meta name='robots' content='index,follow'>
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="#">Adoptuj pupila</a></li>
+            <li><a href="#">Zgubiony zwierzak</a></li>
+            <li><a href="#">Kontakt</a></li>
+            <li><a href="#">BIP</a></li>
+        </ul>
+    </nav>
 
+    <header>
+        <div class="gallery">
+            <div class="dot active" id="dot1"></div>
+            <div class="dot" id="dot2"></div>
+            <div class="dot" id="dot3"></div>
+            <div class="arrow arrow-left"><i class="fa-solid fa-angle-left"></i></div>
+            <div class="arrow arrow-right"><i class="fa-solid fa-angle-right"></i></div>
+        </div>
+    </header>
+    <section class="info">
+        <div></div>
+        <div></div>
+        <div></div>
+    </section>
+
+    <section class="news">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </section>
+    <section class="contact">
+
+    </section>
+    <footer>
+        &copy;2022
+    </footer>
+
+    <script src="/scripts/gallery.js"></script>
 </body>
 
 </html>
