--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <!-- <link rel="icon" type="img/favicon" href="/images/favicon.ico"> -->
     <meta name="description" content="Schronisko dla Twojej Złotej Rybki">
     <script src="https://kit.fontawesome.com/7df5bc0471.js" crossorigin="anonymous"></script>
-    <!-- <link
-        href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Pacifico&family=Roboto+Condensed&display=swap"
-        rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <meta name='keywords' content='schronisko, zwierzeta, kot, pies'>
     <meta name='robots' content='index,follow'>
@@ -20,9 +18,25 @@
 
 <body>
     <nav>
+        <img src="/img/logo.png" alt="logo">
         <ul>
-            <li><a href="#">Adoptuj pupila</a></li>
-            <li><a href="#">Zgubiony zwierzak</a></li>
+            <li id="menu1"><a href="#">Adoptuj pupila</a>
+                <ul>
+                    <li><a href="#">Nasze zwierzaki</a></li>
+                    <li><a href="#">Informacje</a></li>
+                    <li><a href="#">Poradnik opiekuna</a></li>
+                    <li><a href="#">O co pytacie</a></li>
+                    <li><a href="#">Adoptuj wirtualnie</a></li>
+                </ul>
+            </li>
+            <li id="menu2"><a href="#">Zgubiony zwierzak</a>
+                <ul>
+                    <li><a href="#">Zgłoś zgubę</a></li>
+                    <li><a href="#">Poradnik</a></li>
+                    <li><a href="#">Zgubione</a></li>
+                    <li><a href="#">Znalezione</a></li>
+                </ul>
+            </li>
             <li><a href="#">Kontakt</a></li>
             <li><a href="#">BIP</a></li>
         </ul>
