--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <link rel="icon" type="img/favicon" href="/images/favicon.ico"> -->
     <meta name="description" content="Schronisko dla Twojej Złotej Rybki">
     <script src="https://kit.fontawesome.com/7df5bc0471.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <meta name='keywords' content='schronisko, zwierzeta, kot, pies'>
     <meta name='robots' content='index,follow'>
@@ -52,18 +52,42 @@
         </div>
     </header>
     <section class="info">
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+            <div class="photo">
+                <p>bezdomne zwierzęta przyjmowane całą dobę</p>
+            </div>
+        </div>
+        <div>
+            <div class="photo">
+                <p>adopcje:</p>
+                <p>wtorki, środy i czwartki</p>
+                <p>w godz. 12:00 - 16:00</p>
+            </div>
+        </div>
+        <div>
+            <div class="photo">
+                <p>odbiór zwierząt zagubionych:</p>
+                <p>codziennie w godzinach</p>
+                <p>8:00 - 16:00</p>
+            </div>
+        </div>
     </section>
 
     <section class="news">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <p>Aktualności:</p>
+        <div class="row1">
+            <div id="news1">
+                <p>Dzień Psa</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, delectus.</p>
+            </div>
+            <div id="news2"></div>
+            <div id="news3"></div>
+        </div>
+        <div class="row2">
+            <div id="news4"></div>
+            <div id="news5"></div>
+            <div id="news6"></div>
+        </div>
     </section>
     <section class="contact">
 
